[package]
name = "ThermoTransform"
version = "0.3.0"
authors = ["Dawid Lentka <dawid.lentka@outlook.com>"]
edition = "2021"
build = "build.rs"

[features]
time_meas=[]

[dependencies]
rayon = "1.7"
parking_lot="0.12"
triple_buffer = "6.2"
num-complex = "0.4"
ndarray = {version="0.15",features=["rayon"]}
egui = "0.21"
eframe = { version = "0.21", features = ["persistence"] }
egui_extras = "0.21"
rfd = {version = "0.11", features =["file-handle-inner"]}
colorgrad = "0.6"
futures = "0.3"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
atomic_enum = "0.2"
mathru="0.14"
lazy_static="1.4"
ndarray-ndimage = "0.3"
ndrustfft = "0.4"
static_assertions = "1.1"
image="0.24"

[patch.crates-io]
ndarray={git="https://github.com/PingPongun/ndarray.git", branch = "master"}

[build-dependencies]
winresource = "0.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
# [profile.dev.package."*"]
# opt-level = 2


