[package]
name = "ThermoTransform"
version = "0.4.0"
authors = ["Dawid Lentka <dawid.lentka@outlook.com>"]
edition = "2021"
build = "build.rs"

[features]
time_meas=[]

[dependencies]
rayon = "1.7.0"
parking_lot="0.12.1"
triple_buffer = "6.2.0"
num-complex = "0.4.3"
ndarray = {version="0.15.6",features=["rayon"]}
egui = "0.22.0"
eframe = { version = "0.22.0", features = ["persistence"] }
egui_extras = "0.22.0"
rfd = {version = "0.11.4", features =["file-handle-inner"]}
colorgrad = "0.6.2"
futures = "0.3.28"
# You only need serde if you want app persistence:
serde = { version = "1.0.167", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.1"
atomic_enum = "0.2.0"
mathru="0.15.1"
lazy_static="1.4.0"
ndarray-ndimage = "0.3.0"
ndrustfft = "0.4.1"
static_assertions = "1.1.0"
image="0.24.6"
fast-float={git="https://github.com/PingPongun/fast-float-rust.git", branch = "master"}
binrw = "0.11.2"
zstd = {version="0.12.3+zstd.1.5.2",features=["zstdmt"]}
num_cpus = "1.16.0"
clap={version="4.3.11", features=["derive"]}
macros={path="macros/"}

[patch.crates-io]
ndarray={git="https://github.com/PingPongun/ndarray.git", branch = "rewrite_iterators"}
# ndarray={path="../ndarray/"}

[build-dependencies]
winresource = "0.1.15"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.17"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"


[profile.dev]
opt-level = 0 
incremental = true
codegen-units = 256

[profile.dev_opt]
inherits = "dev"
opt-level = 2 
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3 
incremental = false
codegen-units = 1
strip = true
lto = "fat"

[profile.dev_opt.package."*"]
opt-level = 2

[profile.release.package."*"]
opt-level = 3


